@@ -928,6 +928,24 @@ static const canon_cap_t canon_model_capabilities[] =
     iP4500_channel_order
   },
 
+  /***************/
+  /* mini models */
+  /***************/
+
+  { /*  mini220 */
+    "PIXMA mini220", 3,
+    4*72, 8*72, /* US 4" x 8" */
+    10, 10, 9, 14, /* for hagaki: 3.4mm L/R, 3mm top, 5mm bottom */
+    &canon_MULTIPASS_MP170_slotlist,
+    CANON_CAP_STD0|CANON_CAP_px|CANON_CAP_I|CANON_CAP_P,0,control_cmd_PIXMA_MG5300,
+    &canon_PIXMA_mini220_modelist,
+    &canon_SELPHY_DS810_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
+
 
   /*************/
   /* DS models */
