@@ -274,6 +274,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon   BJC S830D  (EXPERIMENTAL)
        Canon   BJC S900   (EXPERIMENTAL)
        Canon   BJC S9000  (EXPERIMENTAL)
+       Canon PIXMA mini220(EXPERIMENTAL)
        Canon PIXMA i50    (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
        Canon PIXMA i250   (EXPERIMENTAL)
